

[metadata]
name = colcon-github-actions
version = attr: colcon_github_actions.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/mjcarroll/colcon-github-actions/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/mjcarroll/colcon-github-actions/
author = Michael Carroll 
author_email = michael@openrobotics.org 
maintainer = Michael Carroll
maintainer_email = michael@openrobotics.org 
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to customize the output for github actions 
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.3.8
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-output-actions

[options.entry_points]
colcon_core.event_handler =
    actions_start_end = colcon_github_actions.event_handler.actions_start_end:ActionsStartEndEventHandler

[flake8]
import-order-style = google

[coverage:run]
source = colcon_github_actions
